<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cr.ac.ucr.paraiso.tydilabs.ui.SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="@string/ip_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/serverUrlET"
            android:text="192.168.43.149" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verificationResultTV"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:text="@string/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verifyUrlBtn"
            android:layout_gravity="bottom" />

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveUrlBtn"
            android:layout_gravity="bottom" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.06" />

        <TextView
            android:text="@string/clear_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/clear_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clearDataBtn" />

        <Button
            android:text="@string/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signOutBtn"
            android:enabled="false" />

    </LinearLayout>
</RelativeLayout>
