<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="cr.ac.ucr.paraiso.tydilabs.ui.InvalidNetworkActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/invalidNetworkHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/header_margin"
            android:gravity="center"
            android:text="@string/invalid_network_header"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/invalidNetworkExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/invalid_network_explain"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/invalidNetworkSolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/invalid_network_solution"
            android:textColor="@android:color/primary_text_dark"
            android:textAlignment="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:text="@string/invalid_network_retry"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btnRetry"
                android:theme="@android:style/Widget.Material.Button" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>
